# 2511youtuber

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  ISSUE.md  README.md  Taskfile.yml  pyproject.toml  pytest.ini  test_character_thumbnail.py  test_scene_gen.py
.aim/: run_metadata.sqlite
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
PIL/: Image.py  ImageDraw.py  ImageFont.py  __init__.py
apps/: README.md
apps/youtube/: README.md  __main__.py  cli.py
assets/春日部つむぎ立ち絵_公式_v2.0/: readme.txt
config/: .env.example  README.md  default.yaml  discord.yaml  local_news.json  prompts.yaml  tmp.md
core/docs/: DESIGN.md  REQUIREMENTS.md
docs/: ANTI_PATTERNS.md  DESIGN.md  PROJECT_HANDBOOK.md  README.md  REQUIREMENTS.md  TESTING.md  automation_playbook.md  directory_structure_guide.md  discord_news_bot.md  future_works.md  investment_youtube_script_plan.md  new_video_generation_methods.md  operations.md  system_overview.md  thumbnail.md  youtube_shorts_strategy.md
docs/analysis/: byosan_money_strategy.md  channel_gap_analysis.md  multimedia_strategy.md  prompt_and_output_strategy.md
docs/architecture/: phase0_core_boundary_memo.md
docs/issues/: 2025-11-23-cloudflare-thumbnail-infographic.md
docs/markets/: qualification.md
docs/references/: zenn_ai_auto_channel.txt
issues/: issue-thumbnail-text-overflow.md
remotion/: README.md  package-lock.json  package.json  tsconfig.json
remotion/src/: NewsVideo.tsx  Root.tsx
scripts/: automation.py  discord-news-bot.service  discord_news_bot.py  import_to_aim.py  inspect_tree.py  mass_generate_gallery.py  restore_prompt.py  run_discord_news_bot.sh  start_aim.sh  test_scene_gen.py  tone_report.py  voicevox_manager.sh  youtube-news-generator.service  youtube-news-generator.timer
src/: README.md  main.py  models.py  tracking.py  workflow.py
src/core/: README.md  io_utils.py  media_utils.py  orchestrator.py  state.py  step.py
src/providers/: README.md  base.py  cloudflare_ai.py  llm.py  news.py  tts.py  twitter.py  video_effects.py  youtube.py
src/services/: __init__.py  image_generation.py
src/steps/: README.md  audio.py  base.py  buzzsprout.py  intro_outro.py  news.py  (+11 more)
tests/: conftest.py  test_complete_e2e.py  test_config_and_secrets.py  test_provider_chain.py  test_real_workflow.py  test_remotion_renderer.py  test_workflow_core.py
(+55 files in other folders)
